# MagazineHarvester

./: README.md  agent.py  chat_manager.py  db_manager.py  journal_downloads.db  main.py  pyproject.toml  replit.nix  scraper.py
attached_assets/: Pasted-Accediendo-a-https-www-jofph-com-articles-38-1-Error-en-get-articles-from-url-There-is-no-curren-1739004621587.txt  Pasted-Ah-veo-que-la-URL-que-us-no-es-correcta-Vamos-a-usar-la-URL-que-se-muestra-en-tus-capturas-de-pan-1738933437495.txt  Pasted-Ahora-puedo-ver-que-el-contenido-se-est-cargando-din-micamente-y-por-eso-no-podemos-acceder-a-l-di-1739015773213.txt  Pasted-Vamos-a-modificar-el-enfoque-para-adaptarlo-a-esta-estructura-espec-fica-pythonCopyimport-requests--1738932617404.txt  Pasted-Veo-que-todav-a-obtenemos-el-error-403-Intentemos-una-soluci-n-m-s-robusta-usando-Selenium-con-un-m-1738932285907.txt  Pasted-Viendo-que-la-API-no-existe-y-bas-ndome-en-el-HTML-que-obtuvimos-antes-que-muestra-que-es-una-aplic-1739015637995.txt  Pasted-from-requests-html-import-HTMLSession-import-time-import-re-class-JournalScraper-def-init--1739004480674.txt  Pasted-import-asyncio-from-playwright-async-api-import-async-playwright-import-requests-import-time-import--1739004289175.txt  Pasted-import-httpx-from-bs4-import-BeautifulSoup-import-time-import-re-class-JournalScraper-def-in-1739007193684.txt  Pasted-import-httpx-import-json-import-re-from-bs4-import-BeautifulSoup-class-JournalScraper-def-in-1739015452589.txt  Pasted-import-requests-from-bs4-import-BeautifulSoup-import-re-class-JournalScraper-def-init-self-1739016460811.txt  (+8 more)
