[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.3",
    "fake-useragent>=2.0.3",
    "langchain>=0.3.17",
    "openai>=1.61.1",
    "playwright>=1.50.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "requests-html>=0.10.0",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "webdriver-manager>=4.0.2",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "anthropic>=0.45.2",
]
